# boxy

./: .gitignore  CMakeLists.txt
bfbuilder/src/: common.c
bfbuilder/src/platform/linux/: intrinsics.S
bfbuilder/src/platform/windows/: intrinsics.asm
bfexec/include/: args.h
bfexec/src/: main.cpp
bfsdk/include/: bfbuilderinterface.h  bfhypercall.h
bfvmm/include/hve/arch/intel_x64/: domain.h  vcpu.h
bfvmm/include/hve/arch/intel_x64/virt/: vclock.h
bfvmm/include/hve/arch/intel_x64/vmcall/: domain_op.h  vm_management_op.h  vm_state_op.h  vp_exit_op.h  vp_management_op.h  vp_state_op.h
bfvmm/include/hve/arch/intel_x64/vmexit/: control_register.h  ept_violation.h  monitor_trap.h  msr.h
bfvmm/include/hve/arch/intel_x64/vmi/: policy_op.h  vmi_op.h
bfvmm/include/hve/arch/intel_x64/vmi/events/: control_register.h  ept_violation.h  monitor_trap.h
bfvmm/src/hve/: CMakeLists.txt
bfvmm/src/hve/arch/intel_x64/: domain.cpp  vcpu.cpp
bfvmm/src/hve/arch/intel_x64/virt/: vclock.cpp
bfvmm/src/hve/arch/intel_x64/vmcall/: domain_op.cpp  handle_op.cpp  vm_management_op.cpp  vm_state_op.cpp  vp_exit_op.cpp  vp_management_op.cpp  vp_state_op.cpp
bfvmm/src/hve/arch/intel_x64/vmexit/: control_register.cpp  ept_violation.cpp  external_interrupt.cpp  monitor_trap.cpp  msr.cpp  vmcall.cpp
bfvmm/src/hve/arch/intel_x64/vmi/: policy_op.cpp  vmi_op.cpp
bfvmm/src/hve/arch/intel_x64/vmi/events/: control_register.cpp  ept_violation.cpp  monitor_trap.cpp
bfvmm/src/main/arch/intel_x64/: vcpu_factory.cpp
examples/buildroot/: Config.in  external.desc  external.mk
examples/buildroot/common/: post-build.sh
examples/buildroot/configs/: vmilinux_defconfig
examples/buildroot/package/cpio/: cpio.mk
examples/buildroot/package/libvmi/: Config.in  libvmi.mk
examples/buildroot/package/vmilinux/: Config.in  vmilinux.mk
examples/buildroot/patch/: 0001-package-json-c-bump-version-to-0.14.patch
examples/vmilinux/: CMakeLists.txt
examples/vmilinux/include/: cmdl.h
examples/vmilinux/src/: init-vmi.cpp
examples/vmilinux/tests/: cmdline.txt  test-init.cpp
scripts/cmake/: validate.cmake
scripts/cmake/config/: default.cmake
scripts/cmake/depends/: buildroot.cmake  linux.cmake
scripts/cmake/utils/: copy_no_follow.cmake
scripts/util/: colors.sh
